# open-finops-stack

./: .gitignore  CLAUDE.md  Dockerfile  FINOPS_DBT_PROJECT_CONTEXT.md  README.md  SETUP.md  compose.yml  config.toml.example  docker-compose.pipeline.yml  docker-compose.yml  finops  finops-docker.sh  finops-podman.sh  issue_11_updated.md  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  start-metabase.sh
.platform/: routes.yaml  services.yaml
core/: __init__.py  config.py  setup.py  state_manager.py
core/backends/: __init__.py  base.py  clickhouse.py  duckdb.py  ducklake.py  factory.py  s3_utils.py  snowflake.py
core/cli/: base.py  main.py
core/utils/: __init__.py
dataeng/: .platform.app.yaml  requirements.txt
dataeng/aws/: manifests.py  manifests_dagster.py
dataeng/clickhouse/: clickhouse_aws_loader.py  clickhouse_client.py  schema_handling.py
dataeng/utils/: configurator.py
docker/: __init__.py  setup.py
docker/metabase/: Dockerfile  README.md
docs/: DOCKER.md  Gemfile  INSTALLATION.md  PLUGIN_DEVELOPMENT.md  PODMAN.md  PUBLISHING.md  VISUALIZATION.md  _config.yml  index.md
docs/architecture/: clickhouse-backend-implementation.md  database-backend-abstraction.md  database-backend-implementation-plan.md  ducklake-backend-implementation.md  modularization-plan.md  phase-1-monorepo-structure.md  phase-2-multi-package-setup.md  phase-3-testing-documentation.md
docs/blog-posts/: 01-building-finops-infrastructure-with-focus.md  02-data-pipeline-architecture-cli-design-dlt.md  03-aws-billing-pipeline-implementation.md  04-modular-architecture-composable-finops.md  BLOG_PLAN.md  README.md
docs/deployment/: index.md
docs/development/: index.md
docs/getting-started/: configuration.md  index.md  installation.md  quick-start.md
docs/reference/: cli.md  index.md
docs/user-guide/: index.md
metabase/: .platform.app.yaml  metabase.version
metabase/scripts/: build.sh  deploy.sh  header.inc  start.sh  update.sh
open_finops/: requirements.txt  setup.py
open_finops/aws/: __init__.py
open_finops/aws_ofs/: __init__.py  manifest_normalizer.py
open_finops/azure/: __init__.py
open_finops/azure_ofs/: __init__.py
open_finops/clickhouse/: __init__.py  clickhouse_client.py  schema_handler.py
open_finops/open_finops/: __init__.py  aws.py  aws_import.py  azure_import.py
open_finops/open_finops_stack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
open_finops/tests/: test_aws.py
scripts/cli/: finops-docker.sh  finops-podman.sh
scripts/metabase/: stop-metabase.sh  (+1 more)
tests/: compare_data.py  conftest.py
utils/: configurator.py
(+35 files in other folders)
