[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-finops"
dynamic = ["version"]
description = "FOCUS-first open source FinOps platform"
readme = "README.md"
authors = [{name = "Open FinOps Community"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: Office/Business :: Financial",
    "Topic :: System :: Monitoring", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
keywords = ["finops", "cloud", "costs", "aws", "azure", "gcp", "billing", "focus"]

[project.urls]
Homepage = "https://github.com/JGrubb/open-finops-stack"
Repository = "https://github.com/JGrubb/open-finops-stack"
Issues = "https://github.com/JGrubb/open-finops-stack/issues"