[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-finops"
dynamic = ["version"]
description = "FOCUS-first open source FinOps platform"
readme = "README.md"
authors = [{name = "Open FinOps Community"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: Office/Business :: Financial",
    "Topic :: System :: Monitoring", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
keywords = ["finops", "cloud", "costs", "aws", "azure", "gcp", "billing", "focus"]
dependencies = [
    "dlt[duckdb,parquet,clickhouse]>=1.0.0",
    "boto3>=1.28.0",
    "toml>=0.10.2",
    "clickhouse-connect>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/JGrubb/open-finops-stack"
Repository = "https://github.com/JGrubb/open-finops-stack"
Issues = "https://github.com/JGrubb/open-finops-stack/issues"